<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/advertise_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_cat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spin_category"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/white"
                    app:hintText="click here to select category" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_cat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spin_subcategory"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/white"
                    app:hintText="click here to select category" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spin_type"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spin_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/white"
                    app:hintText="click here to select type" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spin_age"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spin_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/white"
                    app:hintText="click here to select age" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spin_gender"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spin_gender"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/white"
                    app:hintText="click here to select gender" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_title"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_desc"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_desc"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_address"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_address"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_age"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_age"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_count"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_count"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/enter_price"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/white"
                android:hint="@string/enter_price"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_add_advertise"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/btn_add_advertise"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>