<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spin_type"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spin_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/white"
            app:hintText="click here to select type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spin_age"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spin_age"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/white"
            app:hintText="click here to select age" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/_2sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spin_gender"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spin_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/white"
            app:hintText="click here to select gender" />
    </LinearLayout>

    </LinearLayout>